Testing refactored collision model func

--- a/notebooks/exploratory/2.0-twh-collision-models.md
+++ b/notebooks/exploratory/2.0-twh-collision-models.md
@@ -19,7 +19,7 @@ We ultimately want to infer a collision frequency from DSF data, but to do that 
 ```{code-cell} ipython3
 import numpy as np
 import matplotlib.pyplot as plt
-from src.utilities import collfreqimag
+from src.utilities import collrateimag
 ```
 
 ## Model 1: Drude * (1 + Sigmoid)
@@ -128,6 +128,42 @@ sheight=20
 sactivate=8e1
 sscale=0.1
 plotmodel2(d2height=d2height, d2decay=drudedecay, sheight=sheight, sactivate=sactivate, sscale=sscale)
+```
+
+## Testing models in src/inference/collision_model.py
+
+```{code-cell} ipython3
+import src.inference.collision_models as mods
+```
+
+```{code-cell} ipython3
+def plotmodel_src(params):
+    fig, ax = plt.subplots()
+    ω = np.geomspace(1e-3, 1e3, 200)
+    ax.loglog(ω, mods.collision_activate_decay(ω, **params), label="sum")
+    drudebasic = mods.drude(ω, height=params["drude_height"])
+    ax.plot(ω, drudebasic, ls='--', c='k', label="Drude")
+    gendrude = mods.gendrude(ω, height=params["gendrude_height"], decay=params["gendrude_decay"])
+    ax.plot(ω, gendrude, ls='-.', c='tan', label="genDrude")
+    logistic = mods.logistic(ω, activate=params["logistic_activate"], gradient=params["logistic_gradient"]) + 1e-3
+    ax.plot(ω, params["gendrude_height"] * logistic, ls='--', c='gray', label="logisitc + 1e-3")
+    ax.set_xlabel(r"$\omega$")
+    ax.set_ylabel("Collision frequency")
+    ax.legend()
+    return ax
+```
+
+```{code-cell} ipython3
+params = { "drude_center": 0, 
+           "drude_height": .1, 
+           "gendrude_center": 0, 
+           "gendrude_height": 1, 
+           "gendrude_decay": 1/5, 
+           "logistic_activate": 0.1, 
+           "logistic_gradient": 20
+          }
+ax = plotmodel_src(params)
+ax.set_ylim(1e-3)
 ```
 
 ```{code-cell} ipython3
