updates to initial inference notebook

--- a/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
+++ b/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
@@ -24,6 +24,14 @@ The goal with this notebook is to highlight the flexibility of our own collision
 rate model.
 
 ```{code-cell} ipython3
+# Load the "autoreload" extension so that code can change
+%load_ext autoreload
+
+# always reload modules so that as you change code in src, it gets loaded
+%autoreload 2
+```
+
+```{code-cell} ipython3
 import numpy as np
 from scipy import optimize
 import matplotlib.pyplot as plt
@@ -34,6 +42,7 @@ from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay
+from src.inference.mcmc_inference import inference_loop
 from src.utilities import collrateimag, AtomicUnits, elec_loss_fn
 ```
 
@@ -69,6 +78,11 @@ print(f"length of data = {len(freq_data)}")
 collrate_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
+# function for true collision rate
+true_collrate_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, collrate_data)
+# function for DOS ratio
+dos_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, dos_data)
+
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
 ```
@@ -76,13 +90,6 @@ wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
 ### Create ELF data with collision rate data
 
 We will also trim down the number of data points.
-
-```{code-cell} ipython3
-# function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, collrate_data)
-# function for DOS ratio
-dos_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, dos_data)
-```
 
 ```{code-cell} ipython3
 # Reduce the amount of data we are considering
@@ -111,7 +118,7 @@ plt.legend()
 This is a first step before doing Bayesian inference
 
 ```{code-cell} ipython3
-def residual_for_optimizer(x, y, dielectricfn, wavenum, collisionfn):
+def residual_fn(x, y, dielectricfn, wavenum, collisionfn):
     """ 
     x: frequency data points corresponding to output data `y`
     y: ELF data points
@@ -166,12 +173,12 @@ def dict_least_squares(fun, dict0, *args, **kwargs):
 
 ```{code-cell} ipython3
 # setup
-residual = residual_for_optimizer(freq_data_trim / AtomicUnits.energy,
-                                  elf_data,
-                                  Mermin(ElectronGas(t, d, dos_fn)),
-                                  wavenum_val * AtomicUnits.length,
-                                  collisionrate
-                                 )
+residual = residual_fn(freq_data_trim / AtomicUnits.energy,
+                       elf_data,
+                       Mermin(ElectronGas(t, d, dos_fn)),
+                       wavenum_val * AtomicUnits.length,
+                       collisionrate
+                      )
 # initial parameter guesses
 initparams = {"drude_center": 0, 
                "drude_height": 1, 
@@ -232,9 +239,125 @@ plt.ylim(1e-6) # resolution of data
 plt.legend()
 ```
 
+# Perform MCMC
+
++++
+
+Define our prior probability density function (pdf), likelihood, and posterior pdf
+
 ```{code-cell} ipython3
-# perform MCMC
+def log_prior(params, low=0, high=5):
+    """
+    Uniform prior pdf over parameters
+
+    ERROR: Only a few parameters need to be strictly positive (like the heights)
+    Is this worth changing?
+
+    params: tuple
+        parameters of collision frequency model
+    low, high: int
+        define range of the uniform distribution
+    """
+    if np.all(l <= params) and np.all(params < h):
+        return 0.0
+    return -np.inf
+    
+def log_likelihood(params, x, y, dielectricfn, wavenum, collisionfn, cutoff=1):
+    """
+    log likelihood function that is the log of an N-dimensional cut-off
+    function with soft sides.
+
+    params (dict): parameters that go into collision rate model
+    x: frequency data points corresponding to output data `y`
+    y: ELF data points
+    dielectricfn: dielectric function, a function of `wavenum` and `freq`
+    wavenum: wave number value(s)
+    freq: array of frequency values
+    collisionfn: function for collision rate, depends on `freq` and `params`
+    hyperparams (dict): keyword arguments for the hyperparameters of the
+        likelihood function.
+    
+    returns:
+        log likelihood
+    """
+    if cutoff <= 0:
+        raise RuntimeError("cutoff must be positive and nonzero")
+
+    residual = residual_fn(x,
+                           y,
+                           dielectricfn,
+                           wavenum,
+                           collisionfn
+                          )
+        
+    loglik = -np.max((residual(params) / (np.sqrt(2) * cutoff))**2)
+    
+    return loglik
+
+def log_posterior_fn(x, y, dielectricfn, wavenum, collisionfn, likhyperparams):
+    """
+    log posterior pdf.
+    
+    x: frequency data points corresponding to output data `y`
+    y: ELF data points
+    dielectricfn: dielectric function, a function of `wavenum` and `freq`
+    wavenum: wave number value(s)
+    freq: array of frequency values
+    collisionfn: function for collision rate, depends on `freq` and `params`
+    likhyperparams (dict): keyword arguments for the hyperparameters of the
+        likelihood function.
+    
+    returns:
+        log posterior function that only depends on params of collision rate
+        model.
+    """
+    def log_posterior(params):
+        """
+        params (dict): parameters that go into collision rate model
+        """
+        prior = log_prior(tuple(params.values()))
+        lik = log_likelihood(params,
+                             x, 
+                             y, 
+                             dielectricfn, 
+                             wavenum, 
+                             collisionfn, 
+                             **likhyperparams
+                            )
+        
+        if not (np.isfinite(prior) and np.isfinite(lik)):
+            return -np.inf
+            
+        return prior + lik
+
+    return log_posterior
 ```
+
+```{code-cell} ipython3
+log_posterior = log_posterior_fn(freq_data_trim / AtomicUnits.energy,
+                                 elf_data,
+                                 Mermin(ElectronGas(t, d, dos_fn)),
+                                 wavenum_val * AtomicUnits.length,
+                                 collisionrate,
+                                 cutoff = 0.2
+                                )
+```
+
+## Initial state of MCMC
+
+We will use the results from the optimization to initialize the Markov chains.
+
+```{code-cell} ipython3
+rng = np.random.default_rng()
+
+numchains = 12
+initstate = tuple(optresult.x.values()) + rng.standard_normal(size=(numchains, len(optresult.x)))
+initstate
+```
+
+I'm not sure how to proceed with dictionaries... Could try to use JAX Pytree, see
+<https://gist.github.com/dfm/3e637d60d452e1306b2c4077e33f103a>
+We would have to import jax, but I think we might move in this direction anyways..
 
 ```{code-cell} ipython3
 
