Removing weird characters
These were mysteriously incorporated into the ipynb file,
and prevented jupyter from opening it (although VScode handled it
just fine). The error was along the lines of "unable to open file
... unicode character x00000 not allowed"

--- a/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
+++ b/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
@@ -5,7 +5,7 @@ jupytext:
     extension: .md
     format_name: myst
     format_version: 0.13
-    jupytext_version: 1.15.2
+    jupytext_version: 1.16.0
 kernelspec:
   display_name: Python 3 (ipykernel)
   language: python
@@ -37,10 +37,6 @@ from scipy import optimize
 import matplotlib.pyplot as plt
 from functools import partial
 
-import jax
-import jax.numpy as jnp
-import jax.scipy.stats as stats
-
 import emcee 
 from multiprocessing import Pool
 
@@ -53,8 +49,6 @@ from src.utilities import collrateimag, AtomicUnits, elec_loss_fn
 
 import warnings
 warnings.filterwarnings('ignore')
-
-jax.config.update("jax_enable_x64", True)
 ```
 
 # Define collision rate model
@@ -311,98 +305,6 @@ def logposterior_fn(logparams, x, y, dielectricfn, wavenum, collisionfn, priorhy
 ```
 
 ```{code-cell} ipython3
-# def logprior(params):
-#     """
-#     Uniform prior for the parameters
-
-#     params: array_like
-#         Parameters of collision frequency model
-#     limits: array_like of length 2
-#         limits of the uniform distribution, same for all parameters
-#     """
-#     # check that values are within limits
-#     inbounds n d a r i es[0] < 10 and \\
-#                0 < params[1] < 5 and \\
-#                0 < params[2] < 10 and \\
-#                0 < params[3] < 5 and \\
-#                -2 < params[4] < 5 and \\
-#                0 < params[5] < 10 and \\
-#                0 < params[6] < 1e2
-                
-#     if inbounds:
-#         return 0.0
-#     return -np.inf
-    
-# def loglikelihood(params, x, y, dielectricfn, wavenum, collisionfn, cutoff=1):
-#     """
-#     log likelihood function that is the log of an N-dimensional cut-off
-#     function with soft (exponential) sides.
-
-#     params (array_like): parameters that go into collision rate model
-#     x: frequency data points corresponding to output data `y`
-#     y: ELF data points
-#     dielectricfn: dielectric function, a function of `wavenum` and `freq`
-#     wavenum: wave number value(s)
-#     freq: array of frequency values
-#     collisionfn: function for collision rate, depends on `freq` and `params`
-#     hyperparams (dict): keyword arguments for the hyperparameters of the
-#         likelihood function.
-    
-#     returns:
-#         log likelihood evaluated for the given parameters at the input `x`.
-#     """
-#     if cutoff <= 0:
-#         raise RuntimeError("cutoff must be positive and nonzero")
-
-#     residual = residual_fn(x,
-#                            y,
-#                            dielectricfn,
-#                            wavenum,
-#                            collisionfn,
-#                            params
-#                           )
-        
-#     loglik = -np.max((residual / (np.sqrt(2) * cutoff))**2)
-    
-#     return loglik
-
-# def logposterior_fn(params, x, y, dielectricfn, wavenum, collisionfn, priorhyperparams={}, likhyperparams={}):
-#     """
-#     log posterior pdf.
-
-#     x: frequency data points corresponding to output data `y`
-#     y: ELF data points
-#     dielectricfn: dielectric function, a function of `wavenum` and `freq`
-#     wavenum: wave number value(s)
-#     freq: array of frequency values
-#     collisionfn: function for collision rate, depends on `freq` and (the exponential of) `logparams`
-#     params: parameters for `collisionfn`
-#     likhyperparams (dict): keyword arguments for the hyperparameters of the
-#         prior function.
-#     likhyperparams (dict): keyword arguments for the hyperparameters of the
-#         likelihood function.
-    
-#     returns:
-#         log posterior function that only depends on params of collision rate
-#         model.
-#     """
-#     lgprior = logprior(params, **priorhyperparams)
-#     lglik = loglikelihood(params,
-#                           x, 
-#                           y, 
-#                           dielectricfn, 
-#                           wavenum, 
-#                           collisionfn, 
-#                           **likhyperparams
-#                          )
-    
-#     if not (np.isfinite(lgprior) and np.isfinite(lglik)):
-#         return -np.inf
-        
-#     return lgprior + lglik
-```
-
-```{code-cell} ipython3
 lik_cutoff = 0.05
 prior_lims = (-5, 3)
 
@@ -433,7 +335,7 @@ We will use the results from the optimization to initialize the Markov chains.
 import h5py
 from datetime import datetime
 
-samplesfile = "mcmc_AAcollisions"
+samplesfile = "../../data/mcmc/mcmc_AAcollisions"
 dataset = "mcmc_samples"
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
@@ -451,7 +353,7 @@ runinfo = {
 # sampler properties
 ndim = len(optresult.x)
 numchains = 14
-numsamples = 3_000
+numsamples = 10
 
 # # avoid overwriting datasets
 # dataset = unique_hdf5_group(samplesfile, dataset)
@@ -460,7 +362,8 @@ backend.reset(numchains, ndim)
 
 # randomly initialize chains within the boundaries (log scale: prior_lims)
 rng = np.random.default_rng()
-initial_states = prior_lims[0] + (prior_lims[1] - prior_lims[0]) * rng.random(size=(numchains, ndim))
+initial_states = prior_lims[0] \
+    + (prior_lims[1] - prior_lims[0]) * rng.random(size=(numchains, ndim))
 
 # perform ensemble MCMC sampling of logposterior
 with Pool() as pool:
@@ -477,11 +380,12 @@ with h5py.File(samplesfile, "a") as f:
 ```
 
 ```{code-cell} ipython3
-with h5py.File(samplesfile, "a") as f:
-    print(list(f.keys()))
-    dset = f["mcmc_samples"]
-    for attr in dset.attrs:
-        print(f"{attr} : {dset.attrs[attr]}")
+# # view attributes of dataset
+# with h5py.File(samplesfile, "a") as f:
+#     print(list(f.keys()))
+#     dset = f["mcmc_samples"]
+#     for attr in dset.attrs:
+#         print(f"{attr} : {dset.attrs[attr]}")
 ```
 
 ```{code-cell} ipython3
