--- a/notebooks/exploratory/5.0-twh-inferrence-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inferrence-AAcollisions.md
@@ -12,17 +12,6 @@ kernelspec:
   name: python3
 ---
 
-# Optimize collision rate model for known Average Atom collision rate data
-
-We use collision rate data from an average atom model to produce Mermin ELF data.
-We then try to fit a Mermin ELF model using our collision rate model to the data.
-This is different from notebook `4.0-twh-optimize-known-collisions.txt` because 
-the collision rate that produced the data comes from an independent/black-box 
-collision rate model.
-
-The goal with this notebook is to highlight the flexibility of our own collision
-rate model.
-
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
 %load_ext autoreload
@@ -33,7 +22,6 @@ rate model.
 
 ```{code-cell} ipython3
 import numpy as np
-from scipy import optimize
 import matplotlib.pyplot as plt
 from functools import partial
 
@@ -51,7 +39,7 @@ import warnings
 warnings.filterwarnings('ignore')
 ```
 
-# Define collision rate # Define collision rate model# Define collision rate model# Define collision rate modelmodel
+# Define collision rate model
 
 ```{code-cell} ipython3
 # define our collision rate function
@@ -108,19 +96,7 @@ elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
 print(elf_data.shape)
 ```
 
-### plot the collision rate data
-
-```{code-cell} ipython3
-plt.semilogx(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).real, label="real")
-plt.plot(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).imag, label="imag.")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision frequency [au]")
-plt.legend()
-```
-
-# Define residual function for optimizing the parameters
-
-This is a first step before doing Bayesian inference
+# Define residual function
 
 ```{code-cell} ipython3
 def residual_fn(x, y, dielectricfn, wavenum, collisionfn, params):
@@ -142,70 +118,6 @@ def residual_fn(x, y, dielectricfn, wavenum, collisionfn, params):
                             x,
                             lambda x: collisionfn(x, params))
     return y - elf_calc
-```
-
-# Optimize to get initial guess for parameters
-
-```{code-cell} ipython3
-# setup
-residual = partial(residual_fn,
-                   freq_data_trim / AtomicUnits.energy,
-                   elf_data,
-                   Mermin(ElectronGas(t, d, dos_fn)),
-                   wavenum_val * AtomicUnits.length,
-                   collisionrate
-                  )
-# initial parameter guesses
-initparams = (0, 1, 0, 1, 1.5, 0, 10)
-
-# optimization results
-optresult = optimize.least_squares(residual, initparams, max_nfev=150)
-```
-
-```{code-cell} ipython3
-optresult
-```
-
-Plot true collision frequencies and the optimized versions
-
-```{code-cell} ipython3
-# original
-plt.semilogx(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
-plt.plot(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).imag, c="C3", ls="--")
-# optimized
-plt.plot(freq_data_trim, collisionrate(freq_data_trim / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
-plt.plot(freq_data_trim, collisionrate(freq_data_trim / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision frequency [au]")
-plt.legend()
-```
-
-```{code-cell} ipython3
-plt.semilogx(freq_data_trim, elf_data, c="C3", label="Avg. Atom")
-opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                       wavenum_val * AtomicUnits.length,
-                       freq_data_trim / AtomicUnits.energy,
-                       lambda x: collisionrate(x, optresult.x)
-                      )
-plt.plot(freq_data_trim, opt_elf, c="C0", ls='-.', label="opt.")
-plt.ylabel("ELF [au]")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylim(1e-6) # resolution of data
-plt.legend()
-```
-
-```{code-cell} ipython3
-plt.loglog(freq_data_trim, elf_data, c="C3", label="Avg. Atom")
-opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                       wavenum_val * AtomicUnits.length,
-                       freq_data_trim / AtomicUnits.energy,
-                       lambda x: collisionrate(x, optresult.x)
-                      )
-plt.plot(freq_data_trim, opt_elf, c="C0", ls='-.', label="opt.")
-plt.ylabel("ELF [au]")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylim(1e-6) # resolution of data
-plt.legend()
 ```
 
 # Perform MCMC
@@ -351,7 +263,7 @@ runinfo = {
 }
 
 # sampler properties
-ndim = len(optresult.x)
+ndim = 7 # number of parameters
 numchains = 14
 numsamples = 100
 
@@ -423,32 +335,4 @@ for i in range(ndim):
     ax.yaxis.set_label_coords(-0.1, 0.5)
 
 axes[-1].set_xlabel("step number");
-```
-
-```{code-cell} ipython3
-sampler.get_chain().shape
-```
-
-```{code-cell} ipython3
-plt.close()
-# plot only a subset of marginal posterior distributions
-fig, axes = plt.subplots(4, figsize=(10,2.5*4))
-flat_samples = sampler.get_chain(discard=500, thin=24, flat=True)
-print(flat_samples.shape)
-for axi, i in enumerate([0, 3, 6, 9]):
-    ax = axes[axi]
-    ax.hist(flat_samples[:,i], bins=100, color='k', histtype="step")
-    ax.set_ylabel(r'$p(\alpha_{{{}}})$'.format(i))
-    ax.set_xlabel(r'$\alpha_{{{}}}$'.format(i))
-    ax.set_yticks([]);
-    # Percentiles
-    mcmc = np.percentile(flat_samples[:, i], [16, 50, 84])
-    q = np.diff(mcmc)
-
-    ax.axvline(mcmc[0], c='C1', label='16%')
-    ax.axvline(mcmc[1], c='C0', label='50%')
-    ax.axvline(mcmc[2], c='C2', label='84%')
-
-axes[0].legend()
-plt.tight_layout()
 ```
