feature to include more residual function types

--- a/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
+++ b/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
@@ -19,13 +19,9 @@ We then try to fit a Mermin ELF model using our collision rate model to the data
 
 This is very similar to `4.1-twh-optimize-known-AAcollisions.txt`, but now we want to examine the effects that
 different residual functions (or different loss functions) have on the result. We also examine the optimization 
-using data with additive Gaussian noise. 
+using data with additive Gaussian noise.
 
 ```{code-cell} ipython3
----
-jupyter:
-  source_hidden: true
----
 # Load the "autoreload" extension so that code can change
 %load_ext autoreload
 
@@ -34,10 +30,6 @@ jupyter:
 ```
 
 ```{code-cell} ipython3
----
-jupyter:
-  source_hidden: true
----
 import numpy as np
 rng = np.random.default_rng()
 from scipy import optimize
@@ -78,12 +70,28 @@ def collisionrate(freq, params):
 ## Define the plotting function
 
 ```{code-cell} ipython3
----
-jupyter:
-  source_hidden: true
----
-def make_plots(collisionrate_params, elf_data):
-    # plot characterstics depend on if we plot the last subplot
+def make_plots(
+    freq, 
+    optelf, 
+    elfdata, 
+    optcollision, 
+    collisiondata
+):
+    """
+    Plots for this analysis
+
+    freq (array_like): frequency data points in [eV] units
+    opelf (array_like): ELF data from model using optimized collision
+        rate parameters
+    elfdata (array_like): ELF data from data set
+    optcollision (array_like): collision rate data from model using
+        optimized collision rate parameters
+    collisiondata (array_like): collision rate data used to generate
+        `elfdata`
+    
+    """
+    
+    # plotting characterstics depend on if we plot the last subplot
     numplots = 3 if np.all(elf_data > 0) else 2
     figsize = (6, 10)
     if numplots == 3:
@@ -92,38 +100,31 @@ def make_plots(collisionrate_params, elf_data):
     
     # collision frequency
     # original
-    truecollisions = true_collrate_fn(freq_data_trim / AtomicUnits.energy)
-    axs[0].semilogx(freq_data_trim,
-                    truecollisions.real,
+    axs[0].semilogx(freq,
+                    collisiondata.real,
                     c="C3",
                     label="Avg. Atom")
-    axs[0].plot(freq_data_trim, truecollisions.imag, c="C3", ls="--")
-    
+    axs[0].plot(freq, collisiondata.imag, c="C3", ls="--")
+
     # optimized
-    optcollisions = collisionrate(freq_data_trim / AtomicUnits.energy,
-                                  collisionrate_params)
-    axs[0].plot(freq_data_trim, optcollisions.real, c="C0", label="opt.")
-    axs[0].plot(freq_data_trim, optcollisions.imag, c="C0", ls="--")
+    axs[0].semilogx(freq, optcollision.real, c="C0", label="opt.")
+    axs[0].plot(freq, optcollision.imag, c="C0", ls="--")
     
     axs[0].set_ylabel("collision frequency [au]")
 
     # ELF
     # orignal
-    axs[1].semilogx(freq_data_trim, elf_data, c="C3", label="Avg. Atom")
-    opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                           wavenum_val * AtomicUnits.length,
-                           freq_data_trim / AtomicUnits.energy,
-                           lambda x: collisionrate(x, collisionrate_params)
-                          )
+    axs[1].semilogx(freq, elfdata, c="C3", label="Avg. Atom")
+
     # optimized
-    axs[1].plot(freq_data_trim, opt_elf, c="C0", ls='-.', label="opt.")
+    axs[1].plot(freq, optelf, c="C0", ls='-.', label="opt.")
     axs[1].set_ylabel("ELF [au]")
     
     # optimize - loglog plot
     # check that elf_data is strictly positive
     if numplots == 3:
-        axs[2].loglog(freq_data_trim, elf_data, c="C3", label="Avg. Atom")
-        axs[2].plot(freq_data_trim, opt_elf, c="C0", ls='-.', label="opt.")
+        axs[2].loglog(freq, elfdata, c="C3", label="Avg. Atom")
+        axs[2].plot(freq, optelf, c="C0", ls='-.', label="opt.")
         axs[2].set_ylabel("ELF [au]")
         axs[2].set_xlabel(r"$\hbar \omega$ [eV]")
         axs[2].set_ylim(1e-6)
@@ -135,29 +136,112 @@ def make_plots(collisionrate_params, elf_data):
     return fig, axs
 ```
 
+## Define a residual function for optimizing the parameters
+We are ultimately performing a nonlinear least squares optimization. The loss function in this case is
+$$ L(\theta) = \min_\theta \|r(\theta)\|_2^2,$$
+where the $i^\mathrm{th}$ component of the vector residual is $r_i(\theta) = y_i - f(x_i; \theta)$, and
+$y_i$ is the data and $f(x_i; \theta)$ is the model evaluated at the point $x_i$ with parameters $\theta$
+we want to optimize.
+
+We also want to consider a residual function that considers the _relative_ difference between the model and
+the data, $r'_i(\theta) = (y_i - f(x_i; \theta))/y_i$. This can be useful if the data spans different orders
+of magnitude and we want to treat each point equally (for example, when using the absolute residual, by default larger values have more importance
+simply because they are larger).
+
+```{code-cell} ipython3
+def residual_fn(
+    freq, 
+    ydata,
+    dielectricfn, 
+    wavenum, 
+    collisionfn, 
+    params, 
+    type="abs"
+):
+    """
+    residual function between the data and the ELF model
+    
+    freq: frequency data points corresponding to output data `ydata`, atomic units
+    ydata: ELF data points, atomic units
+    dielectricfn: dielectric function, a function of `wavenum` and `x`
+    wavenum: wave number value(s), atomic units
+    collisionfn: function for collision rate, depends on `freq` and the
+        parameters `params` we want to optimize
+    params (tuple): parameters that go into collision rate model `collisionfn`
+    type (string): the type of residual function. There are four choices:
+        "abs" - absolute residual: ydata - model
+        "rel" - relative residual: (ydata - model) / ydata
+        "rel_mod" - relative residual wrt model: (ydata - model) / model
+        "rel_geom" - relative residual wrt geometric mean of data and model:
+                     (ydata - model) / |ydata * model|**(1 / 2)
+
+        The different types will tend to emphasize different features in the
+        data that the parameters of the model should be optimized to fit.
+    
+    returns:
+        residual of the model with respect to the data `ydata`
+    """
+    elf_calc = elec_loss_fn(dielectricfn,
+                            wavenum,
+                            freq,
+                            lambda x: collisionfn(x, params))
+    match type:
+        case "abs":
+            weight = 1
+        case "rel":
+            weight = ydata
+        case "rel_mod":
+            weight = elf_calc
+        case "rel_geom":
+            weight = np.abs(ydata * elf_calc)**(1 / 2)
+        case _:
+            raise ValueError(f"residual type {type} not accepted")
+            
+    return (ydata - elf_calc) / weight
+```
+
 ## Define a function to perform the repeated analysis
 
 ```{code-cell} ipython3
----
-jupyter:
-  source_hidden: true
----
-def analysis(freq, ydata, dielectricfn, wavenum, collisionfn, initparams, residualtype="abs"):
+def analysis(
+    freq, 
+    ydata, 
+    dielectricfn, 
+    wavenum, 
+    collisionfn, 
+    initparams, 
+    collisiondata, 
+    residualtype="abs"
+):
     """
     Helper function that performs the main analysis of this notebook,
     which is repeated multiple times with slightly different inputs.
+    Depends on the external functions `residual_fn` and `make_plots`.
 
-    freq: frequency data points corresponding to output data `y`
-    ydata: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    collisionfn: function for collision rate, depends on `freq` and the
-        parameters `params` we want to optimize
-    residualtype: "abs" for absolute residual or "rel" for relative residual.
-    initparams: initial parameters for optimization
-    """
-    weight = 1 if residualtype == "abs" else ydata
-    
+    freq (array_like): frequency data points corresponding to output
+        data `ydata`, in atomic units
+    ydata (array_like): ELF data points, in atomic units
+    dielectricfn (function): dielectric function, a function of
+        `wavenum` and `freq`
+    wavenum (scalar): wave number value(s), in atomic units
+    collisionfn (function): function for collision rate, depends on
+        `freq` and the parameters we want to optimize
+    initparams (tuple): initial parameters for optimization
+    collisiondata (array_like): collision rate data used to create
+        `ydata`
+    residualtype (string): the type of residual function. There are
+        four choices:
+            "abs" - absolute residual: ydata - model
+            "rel" - relative residual: (ydata - model) / ydata
+            "rel_mod" - relative residual wrt model:
+                (ydata - model) / model
+            "rel_geom" - relative residual wrt geometric mean of data
+                and model:
+                    (ydata - model) / |ydata * model|**(1 / 2)
+
+        The different types will tend to emphasize different features in the
+        data that the parameters of the model should be optimized to fit. 
+    """    
     # setup
     residual = partial(residual_fn,
                        freq,
@@ -165,7 +249,7 @@ def analysis(freq, ydata, dielectricfn, wavenum, collisionfn, initparams, residu
                        dielectricfn,
                        wavenum,
                        collisionfn,
-                       weight=weight
+                       type=residualtype
                       )
     
     # optimization results
@@ -178,11 +262,10 @@ def analysis(freq, ydata, dielectricfn, wavenum, collisionfn, initparams, residu
                             freq,
                             lambda x: collisionfn(x, optresult.x)
                            )
-    print(f"2-norm of absolute difference: {np.linalg.norm(ydata - elf_calc)}")
-    print(f"2-norm of relative difference: {np.linalg.norm((ydata - elf_calc)/ydata)}")
+    print(f"2-norm of residual: {np.linalg.norm(optresult.fun)}")
 
     # plot the results
-    _ = make_plots(optresult.x, ydata)
+    _ = make_plots(freq * AtomicUnits.energy, elf_calc, ydata, collisionfn(freq, optresult.x), collisiondata)
     
     return optresult
 ```
@@ -190,10 +273,6 @@ def analysis(freq, ydata, dielectricfn, wavenum, collisionfn, initparams, residu
 # Get the data
 
 ```{code-cell} ipython3
----
-jupyter:
-  source_hidden: true
----
 datafile = "../../data/external/Al-1 _vwf.txt"
 # just copying from the data file
 # temperature
@@ -205,16 +284,18 @@ d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
-freq_data = datadump[0] # [eV]
-print(f"length of data = {len(freq_data)}")
+orig_freq_data = datadump[0] # [eV]
+print(f"length of original data = {len(orig_freq_data)}")
 collrate_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
 # function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, collrate_data)
+true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
+# create a new, more regular frequency grid that what exists in the data file
+freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 150) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
 ```
@@ -224,19 +305,13 @@ wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
 We will also trim down the number of data points.
 
 ```{code-cell} ipython3
----
-jupyter:
-  source_hidden: true
----
-# Reduce the amount of data we are considering
-freq_data_trim = freq_data[::8]
 # true ELF data
 elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                         wavenum_val * AtomicUnits.length,
-                        freq_data_trim / AtomicUnits.energy,
+                        freq_data / AtomicUnits.energy,
                         true_collrate_fn
                        )
-print(elf_data.shape)
+print(f"shape of ELF data = {elf_data.shape}")
 
 # noisy ELF data: additive Gaussian noise with a standard deviation
 # set to 1% of the max value
@@ -246,12 +321,8 @@ elf_data_noise = elf_data + 0.01 * np.max(elf_data) * rng.standard_normal(len(el
 ### plot the collision rate data
 
 ```{code-cell} ipython3
----
-jupyter:
-  source_hidden: true
----
-plt.semilogx(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).real, label="real")
-plt.plot(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).imag, label="imag.")
+plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, label="real")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, label="imag.")
 plt.xlabel(r"$\omega$ [eV]")
 plt.ylabel("collision frequency [au]")
 plt.legend()
@@ -269,33 +340,7 @@ the data, $r'_i(\theta) = (y_i - f(x_i; \theta))/y_i$. This can be useful if the
 of magnitude and we want to treat each point equally (for example, when using the absolute residual, by default larger values have more importance
 simply because they are larger).
 
-```{code-cell} ipython3
-def residual_fn(x, ydata, dielectricfn, wavenum, collisionfn, params, weight=1):
-    """
-    weighted residual function
-    
-    x: frequency data points corresponding to output data `y`
-    ydata: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    collisionfn: function for collision rate, depends on `freq` and the
-        parameters `params` we want to optimize
-    params (tuple): parameters that go into collision rate model `collisionfn`
-    weight: scalar or array_like consistent with `x` and `y`
-        weights the residual function, useful for emphasizing portions
-        of the data that we may have more confidence in (i.e. low noise),
-        for example. Defualt returns the absolute (typical) least squares
-        residual.
-        
-    returns:
-        residual of the model with respect to the data `y`
-    """
-    elf_calc = elec_loss_fn(dielectricfn,
-                            wavenum,
-                            x,
-                            lambda x: collisionfn(x, params))
-    return (ydata - elf_calc) / weight
-```
++++
 
 # Optimize to get parameters
 
@@ -307,12 +352,13 @@ initparams = (0, 1, 0, 1, 1.5, 0, 10)
 ## 1. absolute residual
 
 ```{code-cell} ipython3
-opt = analysis(freq_data_trim / AtomicUnits.energy,
+opt = analysis(freq_data / AtomicUnits.energy,
                elf_data,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
                collisionrate,
                initparams,
+               true_collrate_fn(freq_data / AtomicUnits.energy),
                residualtype="abs"
               )
 ```
@@ -320,12 +366,13 @@ opt = analysis(freq_data_trim / AtomicUnits.energy,
 ## 2. Relative residual
 
 ```{code-cell} ipython3
-opt = analysis(freq_data_trim / AtomicUnits.energy,
+opt = analysis(freq_data / AtomicUnits.energy,
                elf_data,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
                collisionrate,
                initparams,
+               true_collrate_fn(freq_data / AtomicUnits.energy),
                residualtype="rel"
               )
 ```
